--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,12 +1,19 @@
 name: Python application
 
-on: [push]
+on:
+  push:
+     branches:
+     - master
+  workflow_call:
+    secrets:
+      CODACY_PROJECT_TOKEN:
+        required: true
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
-
+            
     services:
       postgres:
         image: postgres:10.8
